2022-02-27  Karl Berry  <karl@tug.org>

	* texmf.cnf (nest_size): 500 -> 1000.
	(param_size): 10000 -> 20000.
	(stack_size): 5000 -> 10000.
	For stex (ctan.org/pkg/stex), although they also double main_memory
	to 12M (despite the supposed limit of 8M)?

2022-01-18  Karl Berry  <karl@freefriends.org>

	* version.ac (kpse_dev): no more /dev.
	* NEWS,
	* doc/kpathsea.texi,
	* kpsewhich.c,
	* texmf.cnf: copyright 2022.

2021-11-01  Marcel Fabian Krueger  <tex@2krueger.de>

	* str-list.c (str_list_uniqify): compare each input element
	against the elements to be returned, to keep the ordering of the
	result the same as the input.  Then the first result in a list
	from kpsewhich -a will be the same as the result of just kpsewhich.

2021-05-14  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXINPUTS.optex): new definition for new format.
	Move some other definitions around for consistency, but no changes.

2021-05-07  Karl Berry  <karl@freefriends.org>

	* texmf.cnf (save_size): re-increase to 200000
	with parallel change to tex.ch.

2021-04-22  Karl Berry  <karl@freefriends.org>

	* doc/kpathsea.texi (TeX directory structure): link to
	ctan.org/pkg/tds instead of http://mirror.ctan.org.

2021-04-17  Karl Berry  <karl@tug.org>

	* version.ac: now 6.3.4/dev since TL'21 is released.

2021-04-07  Akira Kakuto  <kakuto@w32tex.org>

	* knj.c, readable.c: Fix a bug that the "nul" device given in
	a full-path form, such as c:/usr/work/nul was not readable.

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-03-18  Karl Berry  <karl@tug.org>

	* texmf.cnf (save_size): reset to 80000 since that is what
	sup_save_size is set to in tex.ch. Found by Christian Schenk,
	tex-live 18 Mar 2021 18:39:04.

2021-03-08  Karl Berry  <karl@freefriends.org>

	* tests/cnfline/texmf.cnf (maxpr.lt-kpsewhich): set this,
	for --enable-shared builds.
	https://tug.org/pipermail/tex-k/2021-March/003490.html
	* tests/cnfline.test: unset maxpr othervar, just in case