@@ -1,0 +1,10 @@
+% $Id$
+% Karl Berry, 2022. Public domain.
+\scrollmode
+\let\dumpprimitiveforhilatex\dump % regain control after latex.ltx
+\let\dump\relax
+\input latex.ltx
+\input ifhint.tex
+\input hiltxpage.tex
+\dumpprimitiveforhilatex
+\endinput
